Gateway, application send to production environment using Kubernetes and docker all Done

--- a/K8S/platforms-depl.yaml
+++ b/K8S/platforms-depl.yaml
@@ -34,3 +34,7 @@ spec:
     protocol: TCP
     port: 666
     targetPort: 666
+  - name: plafromgrpc
+    protocol: TCP
+    port: 666
+    targetPort: 666
