--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -4,9 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }, 
+  },
   "CommandService": "http://localhost:6000/api/c/platforms",
   "ConnectionStrings": {
     "PlatformsConn": "Server=localhost,1433;Initial Catalog=platformsdb;User ID=sa;Password=pa55w0rd;"
-  }
+  },
+  "RabbitMQHost": "localhost",
+  "RabbitMQPort": "5672"
 }
